# Shorts_cpp_final

./: CMakeLists.txt  README.md  resources.qrc  shorts
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
